JSValue::toString() should return a JSString* instead of a UString https://bugs.webkit.org/show_bug.cgi?id=76861

Source/JavaScriptCore:

Fixed two failing layout tests after my last patch.

Reviewed by Gavin Barraclough.

* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoFuncSort): Call value() after calling toString(), as
in all other cases.

I missed this case because the JSString* type has a valid operator<,
so the compiler didn't complain.

LayoutTests:

Reviewed by Gavin Barraclough.

Added a unit test for something I got wrong while writing this patch.

* fast/js/add-to-primitive-expected.txt: Added.
* fast/js/add-to-primitive.html: Added.


Canonical link: https://commits.webkit.org/93822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105811 268f45cc-cd09-0410-ab3c-d52691b4dbfc